overflow issue fixed

--- a/src/css/LandingPage.css
+++ b/src/css/LandingPage.css
@@ -1,8 +1,10 @@
 .landing-container{
-    height: 100vh;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 50% 50%;
+
+    height: 100%;
     font-family: 'Instrument Sans';
     color: #000000;
-    max-width: 100%;
 }
 .title {
     font-family: "Poppins Bold";
@@ -16,12 +18,18 @@
     width: 85%;
 }
 .content {
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 3;
+    
     padding: 1rem 2rem;
     margin: 0;
     background-size: cover;
     background-position: center center;
     background-image: url('https://ui167uk0dv.ufs.sh/f/cPmxYSKavd0txHXr62jqWTt9cl3HLV6rnpmBkweR0iEXgGh2');
-    max-width: 100%;
+    width: 100%;
+    height: 100%;
 }
 .branding {
     width: 60%;
